# broccoli

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FetchCxxopts.cmake  FetchDawn.cmake  FetchFmt.cmake  FetchGlm.cmake  FetchRobinHoodHashing.cmake  FetchStbImage.cmake  Strict.cmake
doc/design/: OVERVIEW.md
inc/broccoli/: core.hh  draw.hh  engine.hh  kernel.hh  sample.hh
inc/broccoli/engine/: bitmap.hh  config.hh.in  core.hh  engine.hh  render.hh
inc/broccoli/sample/: sample1.hh  sample2.hh  sample3.hh
inc/stb/: image.hh
res/: r3d.wgsl  render3d.wgsl  tank.blend
res/model/tank/: tank.blend
res/shader/: overlay.wgsl  render3d.wgsl
res/shader/3d/: shadow.wgsl  ubershader.wgsl
script/: setup_dawn.ps1  setup_dawn.sh  unpack.sh
src/broccoli/: core.cc  draw.cc  engine.cc  kernel.cc  main.cc
src/broccoli/engine/: bitmap.cc  core.cc  engine.cc  render.cc
src/broccoli/sample/: sample1.cc  sample2.cc  sample3.cc
src/stb/: image.cc  image_write.cc
